chore: add event retention
